kube/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: ghcr.io/saleor/saleor:3.19
          ports:
            - name: api-port
              containerPort: 8000
          stdin: true
          tty: true
          volumeMounts:
            - name: saleor-media
              mountPath: /app/media
      volumes:
        - name: saleor-media
          emptyDir: {}


---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
spec:
  selector:
    app: api
  ports:
  - protocol: TCP
    name: api-port
    port: 8000
    targetPort: 8000
  type: ClusterIP
