kube/dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-dep
spec:
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
      - name: dashboard
        image: ghcr.io/saleor/saleor-dashboard:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name:  dashboard-port
          containerPort: 80
      restartPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: dashboard-svc
spec:
  selector:
    app: dashboard 
  ports:
  - name: dashboard-port
    protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
