kube/jaeger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger-dp
spec:
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
      - name: jaeger
        image: jaegertracing/all-in-one
        ports:
        - containerPort: 5775
          protocol: UDP
        - containerPort: 6831
          protocol: UDP
        - containerPort: 6832
          protocol: UDP
        - containerPort: 5778
        - containerPort: 16686
        - containerPort: 14268
        - containerPort: 9411
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-service
spec:
  selector:
    app: jaeger
  ports:
  - protocol: UDP
    port: 5775
  - protocol: UDP
    port: 6831
  - protocol: UDP
    port: 6832
  - port: 5778
  - port: 16686
  - port: 14268
  - port: 9411
