kube/work.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-dep
spec:
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: ghcr.io/saleor/saleor:3.19
        command: ["celery", "-A", "saleor", "--app=saleor.celeryconf:app", "worker", "--loglevel=info", "-B"]
      volumeMounts:
        - name: saleor-media
          mountPath: /app/media
      restartPolicy: Always 
      volumes:
        - name: saleor-media
          mountPath: {}
       
---
apiVersion: v1
kind: Service
metadata:
  name: worker-svc
spec:
  selector:
    app: worker
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
